k8s_v2/deployment-judifiltre-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_ID}-deployment
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_ID}
  template:
    metadata:
      labels:
        app: ${APP_ID}
    spec:
      containers:
      - name: ${APP_ID}
        image: ${CI_REGISTRY}/cour-de-cassation/judifiltre:backend-${CI_COMMIT_BRANCH}-${CI_COMMIT_SHORT_SHA}
        ports:
        - containerPort: ${API_PORT}
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s -k --fail --max-time 2 "http://localhost:${API_PORT}/${ROOT_PATH}/health" | egrep -q '${APP_KEYWORD}'
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s -k --fail --max-time 2 "http://localhost:${API_PORT}/${ROOT_PATH}/health" | egrep -q '${APP_KEYWORD}'
          initialDelaySeconds: 15
          periodSeconds: 15
          failureThreshold: 10
          timeoutSeconds: 2
        securityContext:
          runAsUser: 1000
          capabilities:
            drop:
              - all
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
