k8s_v2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_ID}-backend-service
spec:
  selector:
    app: ${APP_ID}-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: ${API_PORT}
  type: ClusterIP
