k8s_v2/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_ID}-client-service
spec:
  selector:
    app: ${APP_ID}-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: ${API_PORT}
  type: ClusterIP
