k8s_v2/ingress-preprod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_ID}-backend-ingress
  namespace: ${KUBE_NAMESPACE}
spec:
  rules:
  - host: ${APP_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${APP_ID}-client-svc
            port:
              number: 80
      - path: /${ROOT_PATH}
        pathType: Prefix
        backend:
          service:
            name: ${APP_ID}-backend-svc
            port:
              number: 80
